include(GNUInstallDirs)

set(PACKAGE mecab-jumandic)
set(VERSION 7.0-20130310)

set(MECAB_DICT_INDEX "${CMAKE_CURRENT_BINARY_DIR}/../mecab/mecab-dict-index")
set(MECAB_JUMANDIC_CHARSET "utf-8")  # (euc-jp/sjis/utf-8)
set(MECAB_JUMANDIC_DIR "${CMAKE_INSTALL_FULL_LIBDIR}/mecab/dic/jumandic")

set(MECAB_JUMANDIC_BYPRODUCTS
  "${CMAKE_CURRENT_BINARY_DIR}/char.bin"
  "${CMAKE_CURRENT_BINARY_DIR}/matrix.bin"
  "${CMAKE_CURRENT_BINARY_DIR}/model.bin"
  "${CMAKE_CURRENT_BINARY_DIR}/sys.dic"
  "${CMAKE_CURRENT_BINARY_DIR}/unk.dic"
)

add_custom_target(
  mecab-jumandic ALL
  COMMAND ${MECAB_DICT_INDEX} -d ${CMAKE_CURRENT_SOURCE_DIR} -o ${CMAKE_CURRENT_BINARY_DIR} -f utf-8 -t ${MECAB_JUMANDIC_CHARSET}
  BYPRODUCTS ${MECAB_JUMANDIC_BYPRODUCTS}
)

set(MECAB_JUMANDIC_DATA
  ${MECAB_JUMANDIC_BYPRODUCTS}
  "${CMAKE_CURRENT_SOURCE_DIR}/char.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/feature.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/left-id.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/matrix.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/model.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/pos-id.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/rewrite.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/right-id.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/unk.def"
  "${CMAKE_CURRENT_SOURCE_DIR}/dicrc"
)

install(FILES
  ${MECAB_JUMANDIC_DATA}
  DESTINATION "${MECAB_JUMANDIC_DIR}"
  )
